Update Maven configuration and switch browser to headless mode for ci